<resources>
    <string name="app_name">El Garage</string>
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>

    <!-- Drawer Menu -->
    <string name="menu_inicio">Inicio</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_vehiculos">Vehículos</string>
    <string name="menu_usuarios">Ver Usuarios</string>
    <string name="menu_cerrar_sesion">Cerrar Sesión</string>

    <string name="tvTitulo">TALLER MECÁNICO\n\EL GARAGE</string>
    <string name="imgView">logo</string>
    <string name="tvBienvenida">Bienvenido !!!</string>
    <string name="btnIngresar">INGRESAR</string>
    <string name="imgLogo1">Logo</string>
    <string name="tvtextView">Bienvenido</string>
    <string name="edtEmail">Nombre de Usuario o Correo</string>
    <string name="edtPassword">Contraseña</string>
    <string name="tvForgot">¿Olvidaste tu Contraseña?</string>
    <string name="btnLogin">INICIAR</string>
    <string name="tvOr">O</string>
    <string name="tvRegister">¿Aún no tienes cuenta? <font color="#E67E00"><b>Regístrate</b></font></string>
    <string name="imgPat">Patiente</string>
    <string name="tvTittle">Regístrate</string>
    <string name="edtName">Nombre</string>
    <string name="edtPhone">Número de Teléfono</string>
    <string name="edtMail">Correo Electrónico</string>
    <string name="edtPasswordConfi">Confirmar Contraseña</string>
    <string name="checkbox">Acepta las <u>Politicas de Privacidad</u> y <u>Términos de Uso</u></string>
    <string name="btnNext">REGISTRAR</string>
    <string name="tvHave">¿Ya tienes una cuenta? <font color="#FF8C00"><b>Ingresa</b></font></string>
    <string name="tvVerification">Verificación</string>
    <string name="imgVeri">verificacion</string>
    <string name="edtEmail2">Ingresa tu Correo</string>
    <string name="btnSend">ENVIAR</string>
    <string name="tvReset">Cambiar Contraseña</string>
    <string name="imgReset">Reset</string>
    <string name="edtPassword2">Ingrese su Nueva Contraseña</string>
    <string name="edtPassword3">Confirmar Contraseña</string>
    <string name="btnContinue">CAMBIAR</string>
    <string name="tvView">Iniciar Sesión</string>
    <string name="edtApellido">Apellidos</string>
    <string name="edtDate">Fecha de Nacimiento</string>
    <string name="textTitle">Lista de Usuarios</string>
    <string name="btnVer">VER USUARIOS</string>
    <string name="textNombre">"Nombres: "</string>
    <string name="textApellido">"Usuario: "</string>
    <string name="textCorreo">"Correo: "</string>
    <string name="textTelefono">"Nro. Teléfono: "</string>
    <string name="textContra">"Contraseña: "</string>
    <string name="textlista">Lista de Usuarios</string>
    <string name="edtUsuario">Usuario</string>
    <string name="tvInicio">EL GARAGE</string>
    <string name="logo">Logo</string>
    <string name="icono_de_clientes">Clientes_icono</string>
    <string name="ver_clientes">CLIENTES</string>
    <string name="ver_vehiculos">VEHÍCULOS</string>
    <string name="icono_de_vehiculo">Vehñiculo_icono\n</string>
    <string name="icono_de_servicios">Servicios_icono</string>
    <string name="icono_de_contactos">Contactos_icono</string>
    <string name="icono_de_sensores">Sensores_icono</string>
    <string name="icono_de_usuarios">Usuarios_icono</string>
    <string name="ver_usuarios">VER USUARIOS</string>
    <string name="ver_sensor">DIVIERTETE</string>
    <string name="ver_contactos">CONTACTOS</string>
    <string name="ver_servicios">SERVICIOS</string>
    <string name="inicio">Inicio</string>
    <string name="inicioS"><b>Inicio</b></string>
    <string name="clientes"><b>Clientes</b></string>
    <string name="veh_culos"><b>Vehículos</b></string>
    <string name="servicios"><b>Servicios</b></string>
    <string name="contactos"><b>Contactos</b></string>
    <string name="sensores"><b>Diviértete</b></string>
    <string name="usuarios"><b>Ver Usuarios</b></string>
    <string name="sesi_n">Cerrar Sesión</string>
    <string name="cerrar_sesi_n"><b>Cerrar Sesión</b></string>
    <string name="taller_mec_nico">Administración del Taller Mecánico</string>
    <string name="usuario_email_com">usuario@email.com</string>
    <string name="reconocimiento_de_placa">Reconocimiento de Placa</string>
    <string name="imagen_de_la_placa">Imagen de la placa</string>
    <string name="captura_o_selecciona_una_imagen">Captura o selecciona una imagen</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="galer_a">Galería</string>
    <string name="confirmar_placa">Confirmar Placa</string>
    <string name="icono_de_usuario">Icono de usuario</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="lista_de_clientes">Lista de Clientes</string>
    <string name="nuevo_cliente">+ Nuevo Cliente</string>
    <string name="gesti_n_de_clientes">Gestión de Clientes</string>
    <string name="cliente">Cliente</string>
    <string name="nuevo_veh_culo">Nuevo Vehículo</string>
    <string name="placa_del_veh_culo">Placa del vehículo</string>
    <string name="photo">📷</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="a_o">Año</string>
    <string name="color">Color</string>
    <string name="kilometraje">Kilometraje</string>
    <string name="guardar_veh_culo">Guardar Vehículo</string>
    <string name="cancelar">Cancelar</string>
    <string name="gesti_n_de_veh_culos">Gestión de Vehículos</string>
    <string name="nuevo_vehiculo">+ Nuevo Vehículo</string>
    <string name="lista_de_veh_culos">Lista de Vehículos</string>
    <string name="nuevocliente">Nuevo Cliente</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="carnet_de_identidad">Carnet de identidad</string>
    <string name="direcci_n">Dirección</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="guardar_cliente">Guardar Cliente</string>
    <string name="jugar_de_nuevo">🔄 JUGAR DE NUEVO</string>
    <string name="game_over">GAME OVER</string>
    <string name="pom">💥</string>
    <string name="puntos_0">Puntos: 0</string>
    <string name="_3">❤ 3</string>
    <string name="r_cord_0_pts">Récord: 0 pts</string>
    <string name="iniciar_juego">🎮 INICIAR JUEGO</string>
    <string name="auto_loco">AUTO LOCO</string>
    <string name="icono">🏎️</string>
    <string name="api_key">AIzaSyDiHCfCjzf-C8A8ZaYPknAQEoJ_WYTxhhk</string>
    <string name="taller_mec_nico_el_garage">📍 Taller Mecánico El Garage</string>
    <string name="toca_para_abrir_en_google_maps">Ubicación de nuestro taller en Google Maps</string>
    <string name="informaci_n_de_contacto">Información de Contacto</string>
    <string name="telefono">Teléfono</string>
    <string name="_591_72604750">+591 72604750</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="smayckel09_gamil_com">smayckel09@gamil.com</string>
    <string name="s_guenos_en_redes_sociales">Síguenos en Redes Sociales</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="_591_726_04750">+591 726 04750</string>
    <string name="facebook">Facebook</string>
    <string name="el_garage_taller">El Garage - Taller</string>
    <string name="instagram">Instagram</string>
    <string name="tiktok">TikTok</string>
    <string name="Contactos">Contactos</string>
    <string name="Ser">Servicios</string>
    <string name="agregar_servicio">Agregar servicio</string>
    <string name="formulario_de_servicio">Formulario de Servicio</string>
    <string name="nombre_del_servicio">Nombre del Servicio</string>
    <string name="precio">Precio</string>
    <string name="cono_ej_fa_oil_can">Ícono (ej: fa-oil-can)</string>
    <string name="ejemplos_fa_oil_can_fa_compass_fa_wrench_fa_car">Ejemplos: fa-oil-can, fa-compass, fa-wrench, fa-car</string>
    <string name="guardar">Guardar</string>
    <string name="fa_oil_can">fa-oil-can</string>
    <string name="nombre_del_servic">Nombre del servicio</string>
    <string name="editar">Editar</string>
    <string name="imagen_del_servicio">Imagen del servicio</string>
    <string name="ejemplo_http_localhost_api_servicios_imagenes_aceite_png">Ejemplo: aceite.png, frenos.png, pastillas.png\n(Vacío = default.png)</string>
    <string name="url_de_imagen">Nombre de Imagen</string>
    <string name="vista_previa_de_imagen">Vista previa de imagen</string>
    <string name="url_https_smayckel_xo_je_imagenes_default_png">URL: https://smayckel.xo.je/imagenes/default.png</string>
    <string name="diagnostico"><b>Diagnosticos</b></string>
    <string name="mecanicos"><b>Mecánicos</b></string>
    <string name="finalizar">Finalizar</string>
    <string name="nuevo_diagn_stico">Nuevo Diagnóstico</string>
    <string name="descripci_n_del_problema">Descripción del Problema</string>
    <string name="veh_culo">Vehículo</string>
    <string name="mec_nico_asignado">Mecánico Asignado</string>
    <string name="resultado_del_diagn_stico">Resultado del Diagnóstico</string>
    <string name="observaciones">Observaciones</string>
    <string name="guardar_diagn_stico">Guardar Diagnóstico</string>
    <string name="nuevo_mec_nico">Nuevo Mecánico</string>
    <string name="nombrecompleto">Nombre Completo</string>
    <string name="guardar_mec_nico">Guardar Mecánico</string>
    <string name="diagn_sticos">Diagnósticos</string>
    <string name="gesti_n_de_diagn_sticos">Gestión de Diagnósticos</string>
    <string name="lista_de_diagn_sticos">Lista de Diagnósticos</string>
    <string name="gesti_n_de_mec_nicos">Gestión de Mecánicos</string>
    <string name="lista_de_mec_nicos">Lista de Mecánicos</string>
    <string name="ver_diagnosticos">DIAGNÓSTICOS</string>
    <string name="ver_mecanicos">MECÁNICOS</string>
</resources>