<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondoc1">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#20FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:fontFamily="@font/janda"
            android:textStyle="bold"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:text="@string/tvTitulo" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/imgView"
            app:srcCompat="@drawable/garage" />

        <TextView
            android:id="@+id/tvBienvenida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="45sp"
            android:textStyle="bold"
            android:fontFamily="@font/chonky"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/tvBienvenida" />

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/roboto"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/btnIngresar" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>