<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CambiarContraActivity"
    android:background="@drawable/salar">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:textSize="35sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/chonky"
            android:text="@string/tvReset" />

        <ImageView
            android:id="@+id/imgReset"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/imgReset"
            app:srcCompat="@drawable/forgot" />

        <EditText
            android:id="@+id/edtPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="10"
            android:background="@drawable/edttext"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:padding="15dp"
            android:textColorHint="#A5000000"
            android:textSize="16sp"
            android:hint="@string/edtPassword2"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edtPassword3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="10"
            android:background="@drawable/edttext"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:padding="15dp"
            android:textColorHint="#A5000000"
            android:textSize="16sp"
            android:hint="@string/edtPassword3"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/roboto"
            android:padding="14dp"
            android:textSize="18sp"
            android:text="@string/btnContinue" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>